# Turnero-Speech

./: .gitignore  README.md  main.py  pyproject.toml
turnero_speech/: README.md  colors.py  gttsYT.py  main.py  main_V0.6.py  main_v0.3.py  main_v0.4.1.py  main_v0.4.2.py  main_v0.5.py  main_v0.7.py  main_v0.8.py  main_v0.9.py  main_v1.0.py  main_v1.2.py  prueba.py
turnero_speech/assets/: iconos.txt
