[tool.poetry]
name = "turnero-speech"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.25.1"
gtts = "^2.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
